# Unix_elective_tasks

Pz1/: CMakeLists.txt  config.json  my_process_manager.cpp
Pz2/Try/: CMakeLists.txt  read.cpp  write.cpp
Pz2/read/: CMakeLists.txt  read.cpp
Pz2/write/: CMakeLists.txt  write.cpp
Pz3/: main.cpp  my-service.service
Pz3/client/: CMakeLists.txt  Dbus_realisation.cpp  Dbus_realisation_client.cpp
Pz3/server/: CMakeLists.txt  Dbus_realisation_server  Dbus_realisation_server.cpp
Pz4/: CMakeLists.txt  CMakeLists_reader.txt  CMakeLists_writer.txt  write.cpp
Pz5/: main.cpp  main_receiver.cpp
Pz6/: hello.c  reader.c  threads.c
Pz9/: CMakeLists.txt  main.cpp
